[tool.poetry]
name = "rustsmith-validator"
version = "0.1.0"
description = ""
authors = ["Mayank Sharma <mayank.sharma.uk@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rsmith-validator = "rustsmith_validator.main:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pyparsing = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
